--- a/src/content/pages/Bios/Carlos.html
+++ b/src/content/pages/Bios/Carlos.html
@@ -9,15 +9,13 @@
         <div class="bio-header">
             <div class="foto-rounded-circle"></div>
             <div class="barra-redes">
-                </br>
                 <a href="https://scholar.google.com/citations?user=JvOePv0AAAAJ&amp;hl=en" target="_blank"><img src="google_scholar.png" alt="google_scholar" width="20" height="20"></a>
                 <a href="https://www.researchgate.net/profile/Carlos_Nusch" target="_blank"><img src="research-gate.png" alt="research-gate" width="20"></a>
                 <a href="https://orcid.org/0000-0003-1715-4228" target="_blank"><img src="orcid.gif" alt="orcid" width="20" height="20"></a>
                 <a href="https://www.linkedin.com/in/carlos-nusch-962b8319/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20"></a>
                 <a href="https://www.facebook.com/carlos.nusch" target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20"></a>
                 <a href="https://twitter.com/KharolusIII" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
-                </br>
-                <h1>Carlos J. Nusch</h1>
+                <h3>Carlos J. Nusch</h3>
             </div>
         </div>
         <div class="bio-text">
@@ -27,7 +25,7 @@
                     <justify><i>Carlos J. Nusch</i> es Profesor y Licenciado en Letras por la <b>Universidad Nacional de La Plata</b> y Máster en Humanidades Digitales por la <b>Universidad Nacional de Educación a Distancia</b>. Ha publicado varios artículos sobre
                         trabajo académico colaborativo, repositorios digitales, digitalización de patrimonio cultural, análisis del discurso político y literatura clásica, medieval y moderna. Trabaja en el <b>Servicio de Difusión de la Creación Intelectual (SEDICI)</b>                        de la UNLP, en el Proyecto de Enlace de Bibliotecas (PREBI) y en el repositorio CIC-Digital (CICPBA).</justify>
                 </p><br/>
-                <h2>Objetivos de desarrollo personal</h2>
+                <h3>Objetivos de desarrollo personal</h3>
                 <p>Mis objetivos para esta materia son:</p>
                 <ul>
                     <li> Aprender todo lo que pueda sobre tecnlolgías Web </li>
@@ -36,13 +34,13 @@
                     <li> Ver cómo el uso de estas tecnologías puede facilitar, agregarle valor y difundir mi trabajo </li>
                 </ul>
             </div>
-            <div class="bio-en">
+            <div class="bio-es">
                 <h3><i>Presentación</i></h3>
                 <p>
                     <justify><i>Carlos J. Nusch</i> es Profesor y Licenciado en Letras por la <b>Universidad Nacional de La Plata</b> y Máster en Humanidades Digitales por la <b>Universidad Nacional de Educación a Distancia</b>. Ha publicado varios artículos sobre
                         trabajo académico colaborativo, repositorios digitales, digitalización de patrimonio cultural, análisis del discurso político y literatura clásica, medieval y moderna. Trabaja en el <b>Servicio de Difusión de la Creación Intelectual (SEDICI)</b>                        de la UNLP, en el Proyecto de Enlace de Bibliotecas (PREBI) y en el repositorio CIC-Digital (CICPBA).</justify>
                 </p><br/>
-                <h2>Objetivos de desarrollo personal</h2>
+                <h3>Objetivos de desarrollo personal</h3>
                 <p>Mis objetivos para esta materia son:</p>
                 <ul>
                     <li> Aprender todo lo que pueda sobre tecnlolgías Web </li>
