--- a/src/content/pages/Bios/Carlos.html
+++ b/src/content/pages/Bios/Carlos.html
@@ -16,6 +16,7 @@
                 <a href="https://www.linkedin.com/in/carlos-nusch-962b8319/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20"></a>
                 <a href="https://www.facebook.com/carlos.nusch" target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20"></a>
                 <a href="https://twitter.com/KharolusIII" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
+                <button class="button-61" role="button">CONTACT</button>
 
             </div>
         </div>
