--- a/src/content/pages/Bios/alice.html
+++ b/src/content/pages/Bios/alice.html
@@ -8,11 +8,36 @@
     <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
     <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
 </nav>
-<div class="bio">
-    <h1>
-        <center>Alice Bi</center>
-    </h1>
-    <center><img src="https://www.dropbox.com/s/hesqzwmt61nu4w1/profile.JPEG?dl=1" alt="Profile picture." width="auto" , height="200px"></center>
-    <p>Alice is an undergraduate student at the University of Maryland, College Park double-majoring in English and International Relations. She's lived in Taipei, Beijing, Singapore, and now College Park - where she's a member of the Jiménez-Porter Writers'
-        House. She's interested in the digital and the liminal.</p>
+
+<div>
+    <div class="bio">
+        <div class="bio-header">
+            <h4>A. Bi
+            </h4>
+            <img src="Alice2.jpg" alt="Alice" class="photo-rounded-circle">
+            <br>
+            <div class="barra-redes">
+                <a href="https://www.linkedin.com/in/ligia-neryanna-gonz%C3%A1lez-4b1871b2/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20"></a>
+                <a href="https://www.facebook.com/ligia.neryanna/ " target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20"></a>
+                <a href="https://twitter.com/Neryanna4" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
+                <br>
+                <br>
+                <button class="button-61" role="button">CONTACT</button>
+
+            </div>
+        </div>
+        <div class="bio-en">
+            <p>
+                <justify><i>Alice Bi</i> is an undergraduate student at the University of Maryland, College Park double-majoring in English and International Relations. She's lived in Taipei, Beijing, Singapore, and now College Park - where she's a member of the
+                    Jiménez-Porter Writers' House. She's interested in the digital and the liminal.
+            </p>
+        </div>
+        <div class="bio-es">
+            <p>
+                <justify><i>Alice Bi</i> is an undergraduate student at the University of Maryland, College Park double-majoring in English and International Relations. She's lived in Taipei, Beijing, Singapore, and now College Park - where she's a member of the
+                    Jiménez-Porter Writers' House. She's interested in the digital and the liminal.
+            </p>
+
+        </div>
+    </div>
 </div>
