--- a/src/content/pages/Bios/julie.html
+++ b/src/content/pages/Bios/julie.html
@@ -12,12 +12,9 @@
             <img src="julie-profile2.jpeg" alt="Julieta Goldsmidt" class="photo-rounded-circle">
             <br>
             <div class="barra-redes">
-                <a href="https://scholar.google.com/citations?user=JvOePv0AAAAJ&amp;hl=en" target="_blank"><img src="google_scholar.png" alt="google_scholar" width="20" height="20"></a>
-                <a href="https://www.researchgate.net/profile/Carlos_Nusch" target="_blank"><img src="research-gate.png" alt="research-gate" width="20"></a>
-                <a href="https://orcid.org/0000-0003-1715-4228" target="_blank"><img src="orcid.gif" alt="orcid" width="20" height="20"></a>
-                <a href="https://www.linkedin.com/in/carlos-nusch-962b8319/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20"></a>
-                <a href="https://www.facebook.com/carlos.nusch" target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20"></a>
-                <a href="https://twitter.com/KharolusIII" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
+                <a href="https://www.linkedin.com/in/julietagoldsmidt/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20"></a>
+                <a href="https://www.facebook.com/profile.php?id=100011093161253" target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20"></a>
+                <a href="https://twitter.com/juligoldsmidt" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
                 <br>
                 <br>
                 <a href="mailto:julieta.gold@gmail.com">
