--- a/src/content/pages/Bios/Carlos.html
+++ b/src/content/pages/Bios/Carlos.html
@@ -26,16 +26,17 @@
         </div>
         <div class="bio-en">
             <p>
-                <justify><i>Carlos J. Nusch</i> es Profesor y Licenciado en Letras por la <b>Universidad Nacional de La Plata</b> y Máster en Humanidades Digitales por la <b>Universidad Nacional de Educación a Distancia</b>. Ha publicado varios artículos sobre
-                    trabajo académico colaborativo, repositorios digitales, digitalización de patrimonio cultural, análisis del discurso político y literatura clásica, medieval y moderna. Trabaja en el <b>Servicio de Difusión de la Creación Intelectual (SEDICI)</b>                    de la UNLP, en el Proyecto de Enlace de Bibliotecas (PREBI) y en el repositorio CIC-Digital (CICPBA).</justify>
+                <justify><i>Carlos J. Nusch</i> He is a Professor and Bachelor of Letters from the <b>National University of La Plata</b> and a Master's in Digital Humanities from the <b>Universidad Nacional de Educación a Distancia</b>. He has published several articles
+                    collaborative academic work, digital repositories, digitization of cultural heritage, analysis of political discourse and classical, medieval and modern literature. He works at the <b>Service for the Dissemination of Intellectual Creation (SEDICI)</b> of the UNLP, at the Library Link Project (PREBI) and at the CIC-Digital repository (CICPBA).</justify>
+            
             </p>
             <!-- <h3>Objetivos de desarrollo personal</h3>-->
-            <p>Mis objetivos para esta materia son:</p>
+            <p>My goals for this class are:</p>
             <ul>
-                <li> Aprender todo lo que pueda sobre tecnlolgías Web </li>
-                <li> Aprender a manejar herramientas para la creación y gestión de ediciones digitales </li>
-                <li> Desarrollar habilidades que me permitan crear y gestionar mis propias ediciones </li>
-                <li> Ver cómo el uso de estas tecnologías puede facilitar, agregarle valor y difundir mi trabajo </li>
+                <li> Learn everything I can about Web technologies </li>
+                <li> Learn to use tools for the creation and management of digital editions </li>
+                <li> Develop skills that allow me to create and manage my own editions </li>
+                <li> See how the use of these technologies can facilitate, add value and spread my work </li>
             </ul>
         </div>
         <div class="bio-es">
